src/main/default/objects/Duplicate_Viewer_Config__c/Duplicate_Viewer_Config__c.object-meta.xml
<CustomObject>
  <label>Duplicate Viewer Config</label>
  <nameField>
    <displayFormat>DVC-{0000}</displayFormat>
    <label>Config Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Duplicate Viewer Configs</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>