src/main/default/objects/Duplicate_Viewer_Config__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
  <fullName>Field_API_Name__c</fullName>
  <label>Field API Name</label>
  <description>The API name of the field to display (e.g., Email, Phone, Industry)</description>
  <type>Text</type>
  <length>255</length>
</CustomField>