src/main/default/objects/Duplicate_Viewer_Config__c/fields/Object_Type__c.field-meta.xml
<CustomField>
  <fullName>Object_Type__c</fullName>
  <label>Object Type</label>
  <description>The SObject API name this configuration applies to (e.g., Account, Contact)</description>
  <type>Text</type>
  <length>255</length>
</CustomField>