src/main/default/objects/Duplicate_Viewer_Config__c/fields/Show_As_Filter__c.field-meta.xml
<CustomField>
  <fullName>Show_As_Filter__c</fullName>
  <label>Show As Filter</label>
  <description>When checked, this field appears as a filter option in the Duplicate Viewer</description>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>