src/main/default/objects/Duplicate_Viewer_Config__c/fields/Show_In_Preview__c.field-meta.xml
<CustomField>
  <fullName>Show_In_Preview__c</fullName>
  <label>Show In Preview</label>
  <description>When checked, this field appears on the duplicate set preview cards</description>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>