src/main/default/objects/Duplicate_Viewer_Config__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
  <fullName>Sort_Order__c</fullName>
  <label>Sort Order</label>
  <description>Display order for the field (lower numbers appear first)</description>
  <type>Number</type>
  <precision>3</precision>
  <scale>0</scale>
  <defaultValue>0</defaultValue>
</CustomField>